--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -13,3 +13,14 @@ jobs:
     steps:
       - name: Trigger hook
         run: curl -d '' https://api.netlify.com/build_hooks/${{ secrets.NETLIFY_HOOK_ID }}
+
+  keepalive:
+    name: Keep Alive workflow
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: gautamkrishnar/keepalive-workflow@master
+        with:
+          commit_message: keep alive Netlify workflow auto-commit
+          committer_username: blockchainetsocietebot
+          committer_email: services@blockchainsociete.org
