build: use netlify domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://v2--blockchainetsociete.netlify.app/'
 languageCode = 'fr-fr'
 title = 'B&S'
 theme = "custom-blist"
