--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,14 @@
-[context.v2]
+[build]
   publish = "docs"
-  command = "yarn fetch-events && yarn build"
+  command = "HUGO_BASEURL=$URL yarn fetch-events && yarn build"
 
-[context.v2.environment]
-  HUGO_VERSION = "0.90.1"
-  NODE_VERSION = "12"
+[build.environment]
+  HUGO_VERSION = "0.91.2"
+  NODE_VERSION = "16"
   NETLIFY_USE_YARN = "true"
+
+[context.deploy-preview]
+  command = "HUGO_BASEURL=$DEPLOY_PRIME_URL yarn fetch-events && yarn build"
+
+[context.branch-deploy]
+  command = "HUGO_BASEURL=$DEPLOY_PRIME_URL yarn fetch-events && yarn build --buildDrafts"
