chore(config): allow to generate robots.txt file

--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,8 @@ contentDir = "content"
 
 enableEmoji = true
 
+enableRobotsTXT = true
+
 [languages]
   [languages.fr]
     contentDir = "content/fr"
