--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "fetch-events": "node scripts/index.js",
     "start": "hugo --gc",
-    "dev": "hugo server --disableFastRender",
+    "dev": "hugo server --disableFastRender --buildDrafts",
     "build": "NODE_ENV=production hugo --gc --minify"
   },
   "devDependencies": {
