--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
+    "hugo-bin": "^0.79.2",
     "postcss": "^8.2.10",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.1",
@@ -27,5 +28,8 @@
     "> 1%",
     "maintained node versions",
     "not dead"
-  ]
+  ],
+  "hugo-bin": {
+    "buildTags": "extended"
+  }
 }
