chore(config): use slug as URL for posts

--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,9 @@ enableEmoji = true
 
 enableRobotsTXT = true
 
+[permalinks]
+  blog = '/:slug/'
+
 [languages]
   [languages.fr]
     contentDir = "content/fr"
