--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
   HUGO_VERSION = "0.91.2"
   NODE_VERSION = "16"
   NETLIFY_USE_YARN = "true"
+  TZ = "Europe/Paris"
 
 [context.deploy-preview]
   command = "yarn fetch-events && HUGO_BASEURL=$DEPLOY_PRIME_URL yarn build"
