ci: force base Yarn version

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,7 @@
   NODE_VERSION = "16"
   NETLIFY_USE_YARN = "true"
   TZ = "Europe/Paris"
+  YARN_VERSION="3.0.0"
 
 [context.deploy-preview]
   command = "yarn fetch-events && HUGO_BASEURL=$DEPLOY_PRIME_URL yarn build"
