--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,8 @@
   NODE_VERSION = "16"
   NETLIFY_USE_YARN = "true"
   TZ = "Europe/Paris"
-  YARN_VERSION="3.0.0"
+  YARN_CACHE_FOLDER = "/opt/buildhome/.yarn_cache"
+  YARN_VERSION="1.22.18"
 
 [context.deploy-preview]
   command = "yarn fetch-events && HUGO_BASEURL=$DEPLOY_PRIME_URL yarn build"
