Revert "build: enable PNP mode of Yarn Berry"
This reverts commit 691abff6ec0fad40c4e23ee844e4d5de7b736236.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,6 @@
-nodeLinker: pnp
+# Currently, it is NOT possible to use PNP mode of Yarn Berry
+# because of https://github.com/gohugoio/hugo/issues/8301
+nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
